// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabify_docs tabifyDocs converts fields by default 1`] = `
Object {
  "columns": Array [
    Object {
      "id": "fieldTest",
      "meta": Object {
        "field": "fieldTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "fieldTest",
    },
    Object {
      "id": "invalidMapping",
      "meta": Object {
        "field": "invalidMapping",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "invalidMapping",
    },
    Object {
      "id": "nested",
      "meta": Object {
        "field": "nested",
        "index": "test-index",
        "params": undefined,
        "type": "object",
      },
      "name": "nested",
    },
    Object {
      "id": "sourceTest",
      "meta": Object {
        "field": "sourceTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "sourceTest",
    },
    Object {
      "id": "_id",
      "meta": Object {
        "field": "_id",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_id",
    },
    Object {
      "id": "_index",
      "meta": Object {
        "field": "_index",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_index",
    },
    Object {
      "id": "_score",
      "meta": Object {
        "field": "_score",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "_score",
    },
  ],
  "rows": Array [
    Object {
      "_id": "hit-id-value",
      "_index": "hit-index-value",
      "_score": 77,
      "fieldTest": 123,
      "invalidMapping": 345,
      "nested": Array [
        Object {
          "field": 123,
        },
      ],
      "sourceTest": 123,
    },
  ],
  "type": "datatable",
}
`;

exports[`tabify_docs tabifyDocs converts source if option is set 1`] = `
Object {
  "columns": Array [
    Object {
      "id": "fieldTest",
      "meta": Object {
        "field": "fieldTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "fieldTest",
    },
    Object {
      "id": "invalidMapping",
      "meta": Object {
        "field": "invalidMapping",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "invalidMapping",
    },
    Object {
      "id": "nested",
      "meta": Object {
        "field": "nested",
        "index": "test-index",
        "params": undefined,
        "type": "object",
      },
      "name": "nested",
    },
    Object {
      "id": "sourceTest",
      "meta": Object {
        "field": "sourceTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "sourceTest",
    },
    Object {
      "id": "_id",
      "meta": Object {
        "field": "_id",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_id",
    },
    Object {
      "id": "_index",
      "meta": Object {
        "field": "_index",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_index",
    },
    Object {
      "id": "_score",
      "meta": Object {
        "field": "_score",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "_score",
    },
  ],
  "rows": Array [
    Object {
      "_id": "hit-id-value",
      "_index": "hit-index-value",
      "_score": 77,
      "fieldTest": 123,
      "invalidMapping": 345,
      "nested": Array [
        Object {
          "field": 123,
        },
      ],
      "sourceTest": 123,
    },
  ],
  "type": "datatable",
}
`;

exports[`tabify_docs tabifyDocs skips nested fields if option is set 1`] = `
Object {
  "columns": Array [
    Object {
      "id": "fieldTest",
      "meta": Object {
        "field": "fieldTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "fieldTest",
    },
    Object {
      "id": "invalidMapping",
      "meta": Object {
        "field": "invalidMapping",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "invalidMapping",
    },
    Object {
      "id": "nested",
      "meta": Object {
        "field": "nested",
        "index": "test-index",
        "params": undefined,
        "type": "object",
      },
      "name": "nested",
    },
    Object {
      "id": "sourceTest",
      "meta": Object {
        "field": "sourceTest",
        "index": "test-index",
        "params": Object {
          "id": "number",
        },
        "type": "number",
      },
      "name": "sourceTest",
    },
    Object {
      "id": "_id",
      "meta": Object {
        "field": "_id",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_id",
    },
    Object {
      "id": "_index",
      "meta": Object {
        "field": "_index",
        "index": "test-index",
        "params": undefined,
        "type": "string",
      },
      "name": "_index",
    },
    Object {
      "id": "_score",
      "meta": Object {
        "field": "_score",
        "index": "test-index",
        "params": undefined,
        "type": "number",
      },
      "name": "_score",
    },
  ],
  "rows": Array [
    Object {
      "_id": "hit-id-value",
      "_index": "hit-index-value",
      "_score": 77,
      "fieldTest": 123,
      "invalidMapping": 345,
      "nested": Array [
        Object {
          "field": 123,
        },
      ],
      "sourceTest": 123,
    },
  ],
  "type": "datatable",
}
`;

exports[`tabify_docs tabifyDocs works without provided index pattern 1`] = `
Object {
  "columns": Array [
    Object {
      "id": "fieldTest",
      "meta": Object {
        "field": "fieldTest",
        "index": undefined,
        "params": undefined,
        "type": "number",
      },
      "name": "fieldTest",
    },
    Object {
      "id": "invalidMapping",
      "meta": Object {
        "field": "invalidMapping",
        "index": undefined,
        "params": undefined,
        "type": "number",
      },
      "name": "invalidMapping",
    },
    Object {
      "id": "nested",
      "meta": Object {
        "field": "nested",
        "index": undefined,
        "params": undefined,
        "type": "object",
      },
      "name": "nested",
    },
    Object {
      "id": "sourceTest",
      "meta": Object {
        "field": "sourceTest",
        "index": undefined,
        "params": undefined,
        "type": "number",
      },
      "name": "sourceTest",
    },
  ],
  "rows": Array [
    Object {
      "fieldTest": 123,
      "invalidMapping": 345,
      "nested": Array [
        Object {
          "field": 123,
        },
      ],
      "sourceTest": 123,
    },
  ],
  "type": "datatable",
}
`;
